test_data/typeerror/scikit-8973.py
cv = check_cv(self.cv)
folds = list(cv.split(X))